# web_server_benchmark

./: .flake8  .gitignore  README.md
benchmark/: README.md  benchmark.py  plot_results.py  pyproject.toml
python_fast_api/: .flake8  README.md
python_fast_api/src/: crud.py  main.py  schemas.py
python_fastapi/: README.md  alembic.ini  pyproject.toml
python_fastapi/alembic/: env.py
python_fastapi/alembic/versions/: 059d83b7c8ba_added_task_table.py
python_fastapi/src/: db.py  models.py
rust_axum/: Cargo.toml  README.md
rust_axum/migrations/2024-07-07-202827_init/: up.sql
rust_axum/src/: crud.rs  main.rs  models.rs  schema.rs
rust_rocket/: Cargo.toml  README.md  Rocket.toml  diesel.toml
rust_rocket/src/: crud.rs  main.rs  models.rs
