[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
