[package]
name = "simple_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.1", features = ["sqlite", "r2d2"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
